--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,16 @@
     <a href="/invite/" class="nav-link">Add Bird-ID!</a>
     <a href="/use/" id="use-button" class="button nav-link"><strong> Use! </strong></a>
   </div>
-
+  <aside>
+    <strong>SciOly-ID needs your help!</strong> The SciOly-ID Fall/Winter/idkseasons Fundraiser is on until Dec.
+    13! We need your support to keep these bots running into the next year. If we aren't able to raise enough money,
+    all
+    SciOlyID bots, including this website, will be shut down. For more information, visit our <a
+      href="https://discord.gg/fXxYyDJ">support server</a>.<br><a class="cta"
+      href="https://ko-fi.com/person_v132"><strong>Donate
+        Here!</strong>
+    </a>
+  </aside>
   <div id="info">
     <h1>Hello! Thanks for checking out Bird-ID, a website/Discord bot for aspiring ornithologists.</h1>
     <p>You probably want to <a href="/invite/">join our Discord server</a>, <a href="/server/">add
