--- a/public/status/404/index.html
+++ b/public/status/404/index.html
@@ -246,7 +246,7 @@
 	</div>
 	<div class="buttons-container">
 		<a class="border-button" href="/" target="_blank" rel="noopener">Go to homepage</a>
-		<a class="border-button" href="https://discord.gg/xDqYddK" target="_blank" rel="noopener">Report a problem</a>
+		<a class="border-button" href="https://discord.gg/2HbshwGjnm" target="_blank" rel="noopener">Report a problem</a>
 	</div>
 </div>
 
